docs(swagger): Adding more routes to the docs
