# backend/app/cars/cars.routes.js
@@ -1,24 +1,11 @@
 'use strict';
 
+const routesUtils = require('../utils/routes');
+const carMetadata = require('./cars.metadata');
 const initCarController = require('./cars.controller');
 
 module.exports = function initCarsRoutes(context) {
   const carController = initCarController(context);
 
-  context.app.get(
-    '/api/v0/cars',
-    carController.list
-  );
-  context.app.get(
-    '/api/v0/users/:user_id/cars',
-    carController.list
-  );
-  context.app.get(
-    '/api/v0/users/:user_id/cars/:car_id',
-    carController.get
-  );
-  context.app.delete(
-    '/api/v0/users/:user_id/cars/:car_id',
-    carController.delete
-  );
+  routesUtils.setupRoutesFromMetadata(context, carController, carMetadata);
 };
