# backend/app/swagger.json
@@ -90,7 +90,7 @@
           }
         ],
         "responses": {
-          "200": {
+          "201": {
             "description": "Resource were created or updated."
           },
           "400": {
@@ -121,6 +121,421 @@
           }
         ],
         "responses": {
+          "400": {
+            "description": "You fucked up."
+          },
+          "410": {
+            "description": "RIP Resource."
+          },
+          "500": {
+            "description": "We fucked up."
+          }
+        }
+      }
+    },
+    "/api/v0/cars": {
+      "get": {
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Everything went well."
+          },
+          "500": {
+            "description": "We fucked up."
+          }
+        }
+      }
+    },
+    "/api/v0/users/{user_id}/cars": {
+      "get": {
+        "parameters": [
+          {
+            "name": "user_id",
+            "in": "path",
+            "description": "User MongoDB ObjectId.",
+            "required": false,
+            "type": "string",
+            "pattern": "[a-z0-9]{24}"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Everything went well."
+          },
+          "500": {
+            "description": "We fucked up."
+          }
+        }
+      }
+    },
+    "/api/v0/users/{user_id}/cars/{car_id}": {
+      "get": {
+        "parameters": [
+          {
+            "name": "user_id",
+            "in": "path",
+            "description": "User MongoDB ObjectId.",
+            "required": false,
+            "type": "string",
+            "pattern": "[a-z0-9]{24}"
+          },
+          {
+            "name": "car_id",
+            "in": "path",
+            "description": "Car MongoDB ObjectId.",
+            "required": false,
+            "type": "string",
+            "pattern": "[a-z0-9]{24}"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Everything went well."
+          },
+          "500": {
+            "description": "We fucked up."
+          }
+        }
+      },
+      "delete": {
+        "parameters": [
+          {
+            "name": "user_id",
+            "in": "path",
+            "description": "User MongoDB ObjectId.",
+            "required": false,
+            "type": "string",
+            "pattern": "[a-z0-9]{24}"
+          },
+          {
+            "name": "car_id",
+            "in": "path",
+            "description": "Car MongoDB ObjectId.",
+            "required": false,
+            "type": "string",
+            "pattern": "[a-z0-9]{24}"
+          }
+        ],
+        "responses": {
+          "400": {
+            "description": "You fucked up."
+          },
+          "410": {
+            "description": "RIP Resource."
+          },
+          "500": {
+            "description": "We fucked up."
+          }
+        }
+      }
+    },
+    "/ping": {
+      "get": {
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Everything went well."
+          },
+          "500": {
+            "description": "We fucked up."
+          }
+        }
+      }
+    },
+    "/bus": {
+      "post": {
+        "parameters": [],
+        "responses": {
+          "201": {
+            "description": "Resource were created or updated."
+          },
+          "400": {
+            "description": "You fucked up."
+          },
+          "500": {
+            "description": "We fucked up."
+          }
+        }
+      }
+    },
+    "/api/v0/trips": {
+      "get": {
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Everything went well."
+          },
+          "500": {
+            "description": "We fucked up."
+          }
+        }
+      }
+    },
+    "/api/v0/users/{user_id}/trips": {
+      "get": {
+        "parameters": [
+          {
+            "name": "user_id",
+            "in": "path",
+            "description": "User MongoDB ObjectId.",
+            "required": false,
+            "type": "string",
+            "pattern": "[a-z0-9]{24}"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Everything went well."
+          },
+          "500": {
+            "description": "We fucked up."
+          }
+        }
+      }
+    },
+    "/api/v0/users/{user_id}/trips/{trip_id}": {
+      "get": {
+        "parameters": [
+          {
+            "name": "user_id",
+            "in": "path",
+            "description": "User MongoDB ObjectId.",
+            "required": false,
+            "type": "string",
+            "pattern": "[a-z0-9]{24}"
+          },
+          {
+            "name": "trip_id",
+            "in": "path",
+            "description": "Trip MongoDB ObjectId.",
+            "required": false,
+            "type": "string",
+            "pattern": "[a-z0-9]{24}"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Everything went well."
+          },
+          "410": {
+            "description": "RIP Resource."
+          },
+          "500": {
+            "description": "We fucked up."
+          }
+        }
+      },
+      "put": {
+        "parameters": [
+          {
+            "name": "user_id",
+            "in": "path",
+            "description": "User MongoDB ObjectId.",
+            "required": false,
+            "type": "string",
+            "pattern": "[a-z0-9]{24}"
+          },
+          {
+            "name": "trip_id",
+            "in": "path",
+            "description": "Trip MongoDB ObjectId.",
+            "required": false,
+            "type": "string",
+            "pattern": "[a-z0-9]{24}"
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Resource were created or updated."
+          },
+          "400": {
+            "description": "You fucked up."
+          },
+          "500": {
+            "description": "We fucked up."
+          }
+        }
+      },
+      "delete": {
+        "parameters": [
+          {
+            "name": "user_id",
+            "in": "path",
+            "description": "User MongoDB ObjectId.",
+            "required": false,
+            "type": "string",
+            "pattern": "[a-z0-9]{24}"
+          },
+          {
+            "name": "trip_id",
+            "in": "path",
+            "description": "Trip MongoDB ObjectId.",
+            "required": false,
+            "type": "string",
+            "pattern": "[a-z0-9]{24}"
+          }
+        ],
+        "responses": {
+          "400": {
+            "description": "You fucked up."
+          },
+          "410": {
+            "description": "RIP Resource."
+          },
+          "500": {
+            "description": "We fucked up."
+          }
+        }
+      }
+    },
+    "/api/v0/users": {
+      "get": {
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Everything went well."
+          },
+          "500": {
+            "description": "We fucked up."
+          }
+        }
+      }
+    },
+    "/api/v0/users/{user_id}": {
+      "get": {
+        "parameters": [
+          {
+            "name": "user_id",
+            "in": "path",
+            "description": "User MongoDB ObjectId.",
+            "required": false,
+            "type": "string",
+            "pattern": "[a-z0-9]{24}"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Everything went well."
+          },
+          "410": {
+            "description": "RIP Resource."
+          },
+          "500": {
+            "description": "We fucked up."
+          }
+        }
+      },
+      "put": {
+        "parameters": [
+          {
+            "name": "user_id",
+            "in": "path",
+            "description": "User MongoDB ObjectId.",
+            "required": false,
+            "type": "string",
+            "pattern": "[a-z0-9]{24}"
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Resource were created or updated."
+          },
+          "400": {
+            "description": "You fucked up."
+          },
+          "500": {
+            "description": "We fucked up."
+          }
+        }
+      },
+      "delete": {
+        "parameters": [
+          {
+            "name": "user_id",
+            "in": "path",
+            "description": "User MongoDB ObjectId.",
+            "required": false,
+            "type": "string",
+            "pattern": "[a-z0-9]{24}"
+          }
+        ],
+        "responses": {
+          "400": {
+            "description": "You fucked up."
+          },
+          "410": {
+            "description": "RIP Resource."
+          },
+          "500": {
+            "description": "We fucked up."
+          }
+        }
+      }
+    },
+    "/api/v0/users/{user_id}/avatar": {
+      "put": {
+        "parameters": [
+          {
+            "name": "user_id",
+            "in": "path",
+            "description": "User MongoDB ObjectId.",
+            "required": false,
+            "type": "string",
+            "pattern": "[a-z0-9]{24}"
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Resource were created or updated."
+          },
+          "410": {
+            "description": "RIP Resource."
+          },
+          "500": {
+            "description": "We fucked up."
+          }
+        }
+      }
+    },
+    "/api/v0/users/{user_id}/friends": {
+      "get": {
+        "parameters": [
+          {
+            "name": "user_id",
+            "in": "path",
+            "description": "User MongoDB ObjectId.",
+            "required": false,
+            "type": "string",
+            "pattern": "[a-z0-9]{24}"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Everything went well."
+          },
+          "410": {
+            "description": "RIP Resource."
+          },
+          "500": {
+            "description": "We fucked up."
+          }
+        }
+      },
+      "post": {
+        "parameters": [
+          {
+            "name": "user_id",
+            "in": "path",
+            "description": "User MongoDB ObjectId.",
+            "required": false,
+            "type": "string",
+            "pattern": "[a-z0-9]{24}"
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Resource were created or updated."
+          },
           "410": {
             "description": "RIP Resource."
           },
